# tman

./: .gitignore  Caps.cs  Config.cs  Detect.cs  Kdl.cs  LICENSE  ProcUtil.cs  Program.cs  README.md  Reaper.cs  Runner.cs  Shim.cs  Store.cs  install.ps1  install.sh  tman.csproj
.github/workflows/: release.yml  site.yml
assets/: demo-setup.sh  demo.tape
installers/npm/: install.js  package.json
installers/psgallery/: tman.psd1  tman.psm1
installers/python/: README.md  pyproject.toml
installers/python/src/tman/: __init__.py  _run.py
site/: astro.config.mjs  package-lock.json
site/src/layouts/: Base.astro
site/src/pages/: docs.astro  index.astro
tests/Tman.Tests/: CapsTests.cs  DetectAliasesTests.cs  InitTests.cs  KdlTests.cs  ShimTests.cs  StoreTests.cs  TempDir.cs  Tman.Tests.csproj
